--- a/index.html
+++ b/index.html
@@ -5,24 +5,8 @@ title: Global Mosquito Alert
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Global Mosquito Alert">
-    <meta name="author" content="Global Mosquito Alert Consortium">
-    
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+{% include head.html %}  
 
-    <title>Global Mosquito Alert</title>
-    
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/bootstrap/css/bootstrap.min.css">
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="{{ site.baseurl }}/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-
-  
     <!-- Custom styles for this template -->
     <link href="{{ site.baseurl }}/assets/bootstrap/css/carousel.css" rel="stylesheet">
     <link href="{{ site.baseurl }}/assets/css/this_style.css" rel="stylesheet">
@@ -97,18 +81,7 @@ font-size: smaller;
 
 </main>
 
-    </div><!-- /.container -->
+{% include bottom_script.html %}  
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-<script src="{{ site.baseurl }}/assets/js/jquery-slim.min.js"></script>
-    <script>window.jQuery || document.write('<script src="{{ site.baseurl }}/assets/jquery.min.js"><\/script>')</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>    
-<script src="{{ site.baseurl }}/assets/bootstrap/js/bootstrap.min.js"></script>
-    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src=".{{ site.baseurl }}/assets/js/holder.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="{{ site.baseurl }}/assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
