--- a/guides/index.html
+++ b/guides/index.html
@@ -33,7 +33,7 @@ title: Guides
       </section>
 <div class="container">
 
-<h2>Coming soon</h2>
+<a href="pillar1/"><img src="pillar1/images/cover.jpg" alt="Pillar 1 Guide" class="img-thumbnail"></a>
 
 </div>
 
