--- a/pillars/index.html
+++ b/pillars/index.html
@@ -37,6 +37,9 @@ title: Pillars
 
 <p>Data will be submitted in real time, through a mobile application or another web interface, with timestamp and geolocation. A notification system should alert participants to new vectors in their area. Alternately, in the “extreme” citizen science version volunteers could submit their written observations via postal mail. Core tasks and data collection protocols include record of the targeted species; picture(s) or sound profiles of the targeted species; information on sampling effort; and, notes. Adult mosquitoes located  with this pillar can lead to a specimen for pillar 4 (see data integration below).</p>
 
+<a href="../guides/pillar1/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Guide</a>
+
+
 <h2>Pillar 2: Larvae and breeding sites.</h2> 
 <p>Data submission as in pillar 1. Core tasks and data collection protocols include record of breeding sites, including site category, habitat description, and genus identification; designation of location as public or private; information on sampling effort;and, notes.Larval data can also lead to a specimen for pillar 4 (see data integration below).</p>
 
