--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ font-size: smaller;
               <div class="carousel-caption semitransparent-medium">
                 <h1>Global Mosquito Alert.</h1>
                 <p>A new citizen science initiative that is leveraging networks of scientists and volunteers for the global surveillance and control of disease-vector mosquitoes.</p>
-                <p><a class="btn btn-lg btn-primary" href="https://www.wilsoncenter.org/sites/default/files/global_mosquito_alert_2018.pdf" role="button">Learn more</a></p>
+                <p><a class="btn btn-lg btn-primary" href="https://www.wilsoncenter.org/global-mosquito-alert" role="button">Learn more</a></p>
               </div>
             </div>
           </div>
@@ -53,7 +53,7 @@ font-size: smaller;
               <div class="carousel-caption semitransparent-medium">
                 <h1>The Global Mosquito Alert Vision.</h1>
                 <p>An open, common set of protocols and toolkit that is augmented with modular components created to meet both global and local research and management needs.</p>
-                <p><a class="btn btn-lg btn-primary" href="https://www.wilsoncenter.org/sites/default/files/global_mosquito_alert_2018.pdf" role="button">Learn more</a></p>
+                <p><a class="btn btn-lg btn-primary" href="https://www.wilsoncenter.org/global-mosquito-alert" role="button">Learn more</a></p>
               </div>
             </div>
           </div>
@@ -63,7 +63,7 @@ font-size: smaller;
               <div class="carousel-caption semitransparent-medium">
                 <h1>Global Mosquito Alert Pillars.</h1>
                 <p>The initiative is organized around 4 pillars:  (1) Real-time targeted vector mosquitos, (2) Larvae and breeding sites, (3) Bites and nuisance, and (4) Biodiversity specimens/ DNA.</p>
-                <p><a class="btn btn-lg btn-primary" href="https://www.wilsoncenter.org/sites/default/files/global_mosquito_alert_2018.pdf" role="button">Learn more</a></p>
+                <p><a class="btn btn-lg btn-primary" href="https://www.wilsoncenter.org/global-mosquito-alert" role="button">Learn more</a></p>
               </div>
             </div>
           </div>
