--- a/guides/pillar1/index.html
+++ b/guides/pillar1/index.html
@@ -123,7 +123,7 @@
 </div>
 <div id="section" class="section level1 unnumbered">
 <h1></h1>
-<p><a href="https://gmac.github.com/best_practices/pillar1" target="_blank"><img src="images/cover.jpg" style="display: block; margin: auto;" /></a></p>
+<p><a href="https://globalmosquitoalert.com/guides/pillar1/intro.html" target="_blank"><img src="images/cover.jpg" style="display: block; margin: auto;" /></a></p>
 <p><img src="images/by-nc-sa.png" alt="Creative Commons License" /><br />
 The online version of this book is licensed under the <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</p>
 
