fixed path to pillar 4 thumbnail

--- a/guides/index.html
+++ b/guides/index.html
@@ -35,7 +35,7 @@ title: Guides
 
 <a href="pillar1/"><img style="width: 200px;" src="pillar1/images/cover.jpg" alt="Pillar 1 Guide" class="img-thumbnail"></a>
 
-<a href="pillar4/"><img style="width: 200px;" src="pillar4/images/cover.jpg" alt="Pillar 4 Guide" class="img-thumbnail"></a>
+<a href="pillar4/"><img style="width: 200px;" src="pillar4/images/cover.jpeg" alt="Pillar 4 Guide" class="img-thumbnail"></a>
 
 
 </div>
